test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/extern_follows_local_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(3)
  ;
  extern
  int
  identifier(x)
  ;
  return
  identifier(x)
  ;
  }
